Added Models folder and first DataAugmentation version

--- a/Preprocesado.ipynb
+++ b/Preprocesado.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "3f2591ea",
    "metadata": {},
    "outputs": [],
@@ -315,19 +315,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "8717295d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\xgboost\\compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "import xgboost as xgb\n",
@@ -335,8 +326,9 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
+    "xgb.set_config(verbosity=0)\n",
     "\n",
-    "model_XGB = XGBClassifier(eval_metric=\"logloss\")\n",
+    "model_XGB = XGBClassifier(eval_metric=\"logloss\", random_state=0, use_label_encoder=False)\n",
     "param_grid_XGB = {\n",
     "    \"booster\": [\"gbtree\", \"gblinear\", \"dart\"],\n",
     "    \"learning_rate\": [0.001, 0.05, 0.1, 0.5]\n",
@@ -348,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "75329541",
    "metadata": {},
    "outputs": [],
@@ -369,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "16d9aebf",
    "metadata": {},
    "outputs": [],
@@ -390,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "fade9e07",
    "metadata": {},
    "outputs": [
@@ -398,18 +390,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parámetros óptimos: {'booster': 'gblinear', 'learning_rate': 0.001}\n",
+      "Parámetros óptimos: {'booster': 'gblinear', 'learning_rate': 0.05}\n",
       "Modelo óptimo: XGBClassifier(base_score=0.5, booster='gblinear', colsample_bylevel=None,\n",
       "              colsample_bynode=None, colsample_bytree=None,\n",
       "              enable_categorical=False, eval_metric='logloss', gamma=None,\n",
       "              gpu_id=-1, importance_type=None, interaction_constraints=None,\n",
-      "              learning_rate=0.001, max_delta_step=None, max_depth=None,\n",
+      "              learning_rate=0.05, max_delta_step=None, max_depth=None,\n",
       "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
       "              n_estimators=100, n_jobs=4, num_parallel_tree=None,\n",
       "              predictor=None, random_state=0, reg_alpha=0, reg_lambda=0,\n",
       "              scale_pos_weight=1, subsample=None, tree_method=None,\n",
-      "              validate_parameters=1, verbosity=None)\n",
-      "Accuracy: 83.33%\n"
+      "              use_label_encoder=False, validate_parameters=1, verbosity=None)\n",
+      "Accuracy: 72.22%\n"
      ]
     }
    ],
