New NN notebook (final)

--- a/Modelos/RedesNeuronales - Opt. mixed.ipynb
+++ b/Modelos/RedesNeuronales - Opt. mixed.ipynb
@@ -2049,13 +2049,7 @@
       "1/1 [==============================] - 0s 31ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 31ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 31ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
-      "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 31ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
@@ -2243,13 +2237,7 @@
       "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 31ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
-      "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.0000e+00 - accuracy: 0.4444\n",
@@ -2863,13 +2851,7 @@
       "1/1 [==============================] - 0s 16ms/step - loss: 0.9793 - accuracy: 0.7778\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.6186 - accuracy: 0.7778\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.6599 - accuracy: 0.6111\n",
-      "1/1 [==============================] - 0s 17ms/step - loss: 0.6293 - accuracy: 0.5556\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 17ms/step - loss: 0.6293 - accuracy: 0.5556\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.7371 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.6817 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 40ms/step - loss: 0.6127 - accuracy: 0.7222\n",
@@ -3065,13 +3047,7 @@
       "1/1 [==============================] - 0s 31ms/step - loss: 0.6994 - accuracy: 0.3889\n",
       "1/1 [==============================] - 0s 47ms/step - loss: 0.8330 - accuracy: 0.4444\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.5581 - accuracy: 0.7222\n",
-      "1/1 [==============================] - 0s 31ms/step - loss: 0.4920 - accuracy: 0.8889\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 31ms/step - loss: 0.4920 - accuracy: 0.8889\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.6508 - accuracy: 0.6111\n",
       "1/1 [==============================] - 0s 16ms/step - loss: 0.5114 - accuracy: 0.7778\n",
       "1/1 [==============================] - 0s 31ms/step - loss: 0.7126 - accuracy: 0.4444\n",
