--- a/Modelos/RedesNeuronales - Solo opt. arquitectura.ipynb
+++ b/Modelos/RedesNeuronales - Solo opt. arquitectura.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "40286d24",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3014e1ce",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c9d8b310",
    "metadata": {},
    "outputs": [],
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "d163caad",
    "metadata": {},
    "outputs": [],
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "6c41d6e0",
    "metadata": {},
    "outputs": [
@@ -1383,60 +1383,6 @@
       "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n",
       "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1500) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1448,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ef1316b5",
    "metadata": {},
    "outputs": [
@@ -1466,10 +1412,54 @@
        " {'activation': 'identity',\n",
        "  'hidden_layer_sizes': (200, 200, 100, 50, 1),\n",
        "  'learning_rate': 'adaptive',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'tanh',\n",
+       "  'hidden_layer_sizes': (200, 200, 100, 50, 1),\n",
+       "  'learning_rate': 'constant',\n",
+       "  'solver': 'sgd'},\n",
+       " {'activation': 'tanh',\n",
+       "  'hidden_layer_sizes': (200, 200, 100, 50, 1),\n",
+       "  'learning_rate': 'constant',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'tanh',\n",
+       "  'hidden_layer_sizes': (200, 200, 100, 50, 1),\n",
+       "  'learning_rate': 'invscaling',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'tanh',\n",
+       "  'hidden_layer_sizes': (200, 200, 100, 50, 1),\n",
+       "  'learning_rate': 'adaptive',\n",
+       "  'solver': 'sgd'},\n",
+       " {'activation': 'tanh',\n",
+       "  'hidden_layer_sizes': (200, 200, 100, 50, 1),\n",
+       "  'learning_rate': 'adaptive',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'tanh',\n",
+       "  'hidden_layer_sizes': (100, 250, 250, 100, 1),\n",
+       "  'learning_rate': 'constant',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'tanh',\n",
+       "  'hidden_layer_sizes': (100, 250, 250, 100, 1),\n",
+       "  'learning_rate': 'invscaling',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'tanh',\n",
+       "  'hidden_layer_sizes': (100, 250, 250, 100, 1),\n",
+       "  'learning_rate': 'adaptive',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'relu',\n",
+       "  'hidden_layer_sizes': (100, 250, 250, 100, 1),\n",
+       "  'learning_rate': 'constant',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'relu',\n",
+       "  'hidden_layer_sizes': (100, 250, 250, 100, 1),\n",
+       "  'learning_rate': 'invscaling',\n",
+       "  'solver': 'adam'},\n",
+       " {'activation': 'relu',\n",
+       "  'hidden_layer_sizes': (100, 250, 250, 100, 1),\n",
+       "  'learning_rate': 'adaptive',\n",
        "  'solver': 'adam'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
