Kaggle predictions made for all models

--- a/Modelos/XGBoost.ipynb
+++ b/Modelos/XGBoost.ipynb
@@ -21,10 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8dea3bde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\saral\\miniconda3\\envs\\TFM\\lib\\site-packages\\xgboost\\compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "# Estructuras de datos\n",
     "import pandas as pd\n",
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "56f13f41",
    "metadata": {},
    "outputs": [
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "77bbef90",
    "metadata": {},
    "outputs": [],
@@ -143,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "715639b9",
    "metadata": {},
    "outputs": [
@@ -249,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "abd4f97c",
    "metadata": {},
    "outputs": [
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "17a7d733",
    "metadata": {},
    "outputs": [
@@ -460,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "b6b02f28",
    "metadata": {},
    "outputs": [
@@ -490,12 +499,23 @@
    "id": "25c8dd12",
    "metadata": {},
    "source": [
-    "Comparamos las predicciones de cualquiera de los dos modelos con misma accuracy máxima:"
+    "Comparamos las predicciones en ``test_kaggle`` los dos modelos con misma accuracy máxima:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
+   "id": "0ad4b192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_model1 = modelXGBoost_optuna_Grid.predict(test_kaggle)\n",
+    "y_pred_model2 = modelXGBoost_optuna_TPE.predict(test_kaggle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "c93cd918",
    "metadata": {},
    "outputs": [
@@ -527,150 +547,164 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>7890</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>10602</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>19861</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>21314</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>23272</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>27814</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>37473</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>43662</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>46080</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51295</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>56437</th>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59791</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>60780</th>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64252</th>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>66381</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>72838</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>81821</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>84149</th>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86004</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95096</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Optuna & GridSampler  Optuna & TPE  All the same\n",
-       "0                      1             1          True\n",
-       "1                      1             1          True\n",
-       "2                      0             0          True\n",
-       "3                      0             0          True\n",
-       "4                      1             1          True\n",
-       "5                      0             0          True\n",
-       "6                      1             1          True\n",
-       "7                      0             0          True\n",
-       "8                      0             0          True\n",
-       "9                      0             0          True\n",
-       "10                     0             0          True\n",
-       "11                     1             1          True\n",
-       "12                     0             0          True\n",
-       "13                     0             0          True\n",
-       "14                     1             1          True\n",
-       "15                     1             1          True\n",
-       "16                     1             1          True\n",
-       "17                     1             1          True"
+       "       Optuna & GridSampler  Optuna & TPE  All the same\n",
+       "7890                      1             0         False\n",
+       "10602                     0             1         False\n",
+       "19861                     1             0         False\n",
+       "21314                     1             0         False\n",
+       "23272                     1             0         False\n",
+       "27814                     1             0         False\n",
+       "37473                     1             0         False\n",
+       "43662                     1             0         False\n",
+       "46080                     1             0         False\n",
+       "51295                     1             0         False\n",
+       "56437                     0             1         False\n",
+       "59791                     1             0         False\n",
+       "60780                     0             1         False\n",
+       "64252                     0             1         False\n",
+       "66381                     1             0         False\n",
+       "72838                     0             1         False\n",
+       "81821                     1             0         False\n",
+       "84149                     1             0         False\n",
+       "86004                     0             1         False\n",
+       "95096                     0             1         False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = {\"Optuna & GridSampler\": y_pred_XGBoost_optuna_Grid, \"Optuna & TPE\": y_pred_XGBoost_optuna_TPE}\n",
+    "results = {\"Optuna & GridSampler\": y_pred_model1, \"Optuna & TPE\": y_pred_model2}\n",
     "\n",
     "results_df = pd.DataFrame(results)    \n",
     "results_df[\"All the same\"] = results_df.eq(results_df.iloc[:, 0], axis=0).all(1)\n",
-    "results_df"
+    "results_df[results_df[\"All the same\"] == False]"
    ]
   },
   {
@@ -678,12 +712,12 @@
    "id": "e6ab9f13",
    "metadata": {},
    "source": [
-    "Ambos modelos generan las mismas predicciones, usamos cualquiera de ellos para generar el submit para Kaggle:"
+    "Los modelos generan distintas predicciones, vamos a generar el submit de Kaggle para ambos:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "081773ef",
    "metadata": {},
    "outputs": [
@@ -696,9 +730,25 @@
     }
    ],
    "source": [
-    "pred_submit = modelXGBoost_optuna_Grid.predict(test_kaggle)\n",
-    "\n",
-    "create_submission(pred_submit, \"XGBoost_submit_opt1\")"
+    "create_submission(y_pred_model1, \"opt_XGBoost_GridSampler\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ec701827",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(119748, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_submission(y_pred_model2, \"opt_XGBoost_TPE\")"
    ]
   }
  ],
